# Airi-Legacy-

./: .env  .env.prod  LICENSE  README.md  pyproject.toml
config/: nowtime.json  广播排除群聊.json  开关.json
config/群消息数据/167963415/: 2023-05-07.json  2023-05-08.json  history.json
config/群消息数据/490563289/: 2023-05-07.json  2023-05-08.json
db/: ncm_cache.json  ncm_check_cache.json  ncm_musics.json  ncm_setting.json
